# stunning-octo-fortnight

./: .gitignore  CMakeLists.txt  README.md
doc/doxygen/: Doxyfile  mainpage.md
src/: env  lib.cpp  main.cpp
src/lib/: file.h  tnode.h
src/lib/tnode/: test.cpp
